--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <body>
       <div ng-controller="FormController">
         <form novalidate class="submission-form">
-          Link: <input type="text" ng-model="post.link" /><br/>
-          <button class='link-submit' ng-click='print(post.link)'>Submit</button>
+          Link: <input type="text" ng-model="item.link" /><br/>
+          <button class='link-submit' ng-click='send(item)'>Submit</button>
         </form>
       </div>
     </body>
