--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,19 @@
   <html ng-app="readUp">
     <head>
       <link rel="stylesheet" type="text/css" href="css/styles.css">
-      <script src="lib/bower_components/angular/angular.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+      <script src="lib/app/bower_components/jquery/jquery.js"></script>
+      <script src="lib/app/bower_components/angular/angular.js"></script>
+      <script src="lib/app/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+      <script src="lib/angular-route.min.js"></script>
+      <script src="lib/angular-strap.min.js"></script>
       <script src="build/bundle.js"></script>
     </head>
     <body>
       <div ng-controller="FormController">
         <form novalidate class="submission-form">
           Link: <input type="text" ng-model="item.link" /><br/>
-          <button class='link-submit' ng-click='send(item)'>Submit</button>
+<!--           <button class='link-submit' ng-click='send(item)'>Submit</button> -->
+          <button type="button" class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
         </form>
       </div>
     </body>
