--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
       <div ng-controller="FormController">
         <form novalidate class="submission-form">
           Link: <input type="text" ng-model="item.link"/><br/>
-<!--           <button class='link-submit' ng-click='send(item)'>Submit</button> -->
-          <button type="button" class="btn" ng-click='updateModal(item)' bs-modal="'./partials/tags_modal.html'">Submit</button>
+          <button type="button" class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
         </form>
       </div>
     </body>
