moved home view out of index

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,7 @@
         </form>
       </div>
       <div ng-controller="HomeController">
-        <div ng-repeat="joe in tags">
-          <div class='home-tags'>{{joe}}</div>
-        </div>
+      <div ng-view></div>
       </div>
       </div>
     </body>
