--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
       <script src="build/bundle.js"></script>
 
       <div ng-controller="FormController">
-        <form novalidate class="submission-form">
-          Link: <input type="text" ng-model="item.link"/><br/>
-          <button type="button" class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
+        <form name="item" no-validate type='url' class="submission-form">
+          Paste your link! <input type="url" placeholder="http://www.ALLofthelinks.com" ng-model="item.link"/ required>
+          <button type="button" ng-disabled='!item.$valid' class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
         </form>
       </div>
       <div ng-controller="HomeController">
