--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <script src="build/bundle.js"></script>
 
       <div ng-controller="FormController">
-        <form name="itemForm" no-validate type='url' class="submission-form">
+        <form name="itemForm" no-validate type='url' class="submission-form" ng-submit='showModal()'>
           Paste your link! <input type="url" placeholder="http://www.ALLofthelinks.com" ng-model="item.link"/ required>
           <button type="button" ng-disabled='!itemForm.$valid' class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
         </form>
