added div for login view

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
               Paste your link! <input type="url" placeholder="http://www.ALLofthelinks.com" ng-model="item.link"/ required>
               <button type="button" ng-disabled='!itemForm.$valid' class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
             </form>
+          <div ng-controller="LoginController">
+          <div>login</div>
+          </div>
           </div>
           <div ng-controller="HomeController">
           <div ng-view></div>
