added custom bootstrap and removed cdn stuff

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
   <meta name='viewport' content='width=device-width initial-scale=1.0'>
   <meta name='apple-mobile-web-app-title' content='Read Up'>
   <meta name='apple-mobile-web-app-capable' content='yes'>
+  <link rel="stylesheet" type="text/css" href="lib/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap-responsive.min.css" rel="stylesheet">
   <script src="//use.edgefonts.net/source-sans-pro:n3,i3,n4,i4,n9.js"></script>      
   <script src="lib/bower_components/jquery/jquery.js"></script>
   <script src="lib/bower_components/angular/angular.js"></script>
