showing login/logout option depending on if a user is signed in

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
               <button type="button" ng-disabled='!itemForm.$valid' class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
             </form>
           <div ng-controller="LoginController">
-          <div>login</div>
+          <div ng-hide="currentUser">login</div>
+          <div ng-hide="!currentUser">
+            logout
+          </div>
           </div>
           </div>
           <div ng-controller="HomeController">
