showing current user's name and karma when they're signed in

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
           <div ng-hide="currentUser">login</div>
           <div ng-hide="!currentUser">
             logout
+            {{currentUser.name}}
+            {{currentUser.karma}}
           </div>
           </div>
           </div>
