--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
               <button type="button" ng-disabled='!itemForm.$valid' class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
             </form>
           <div ng-controller="LoginController">
-          <div ng-hide="currentUser">login</div>
+          <div ng-hide="currentUser" type="button" class="btn" onclick="location.href='http://127.0.0.1:3000/auth/github';">login</div>
           <div ng-hide="!currentUser">
-            logout
+          <div type="button" class="btn" onclick="location.href='http://127.0.0.1:3000/_/logout';">logout</div>
             {{currentUser.name}}
             {{currentUser.karma}}
           </div>
