--- a/public/index.html
+++ b/public/index.html
@@ -45,12 +45,14 @@
           
       </div>
       <div ng-controller="FormController">
-        <form name="itemForm" no-validate type='url' class="submission-form" ng-submit='showModal()'>
+        <form name="searchForm" class="submission-form" ng-submit="getSearchResults()">
           <div id='search-input' class='main-input'>
             <div class='icon'></div>
             <div class='placeholder'>Find a topic</div>
-            <input id='search' class='main-input-text' type='text' autocomplete='off' bs-typeahead='typeaheadSearchFn'>
+            <input id='search' ng-model="searchValue" class='main-input-text' type='text' autocomplete='off' bs-typeahead='typeaheadSearchFn'>
           </div>
+        </form>
+        <form name="itemForm" no-validate type='url' class="submission-form" ng-submit='showModal()'>
           <div id='paste-link-input' class='main-input'>
             <div class='icon'></div>
             <div class='placeholder'>Paste a link</div>
