refactored index to prompt users to login when trying to submit a link

--- a/public/index.html
+++ b/public/index.html
@@ -53,14 +53,23 @@
             <input id='search' ng-model="searchValue" class='main-input-text' type='text' autocomplete='off' bs-typeahead='typeaheadSearchFn'>
           </div>
         </form>
-        <form name="itemForm" no-validate type='url' class="submission-form" ng-submit='showModal()'>
+        <!-- logged in users -->
+        <form ng-hide="!currentUser.username" name="itemForm" no-validate type='url' class="submission-form" ng-disabled='!itemForm.$valid' ng-submit='showModal()'>
           <div id='paste-link-input' class='main-input'>
             <div class='icon'></div>
             <div class='placeholder'>Paste a link</div>
             <input id='paste-link' class='main-input-text' type='url' ng-model="item.link"/ required>
           </div>
-          <button type="button" ng-disabled='!itemForm.$valid' ng-click='getSuggestedData(item.link)'class="btn" bs-modal="'./partials/tags_modal.html'">Submit</button>
         </form>
+        <!-- non-logged in users -->
+        <form ng-hide="currentUser.username" name="itemForm" no-validate type='url' class="submission-form" ng-disabled='!itemForm.$valid' ng-submit='showLoginModal()'>
+          <div id='paste-link-input' class='main-input'>
+            <div class='icon'></div>
+            <div class='placeholder'>Paste a link</div>
+            <input id='paste-link' class='main-input-text' type='url' ng-model="item.link"/ required>
+          </div>
+        </form>
+
       </div>
     </nav>
       <div ng-controller="HomeController">
