change login logout display option.  add avatar when logged in.

--- a/public/index.html
+++ b/public/index.html
@@ -34,16 +34,12 @@
         <!-- <span class='tab-icon'></span>
         <h1>Log in</h1> -->
         <div ng-controller="LoginController">
-          <div id='logo-github'></div>
-          <div ng-hide="currentUser.username" type="button" class="btn" onclick="location.href='auth/github';">login</div>
-          <div ng-hide="!currentUser.username">
-            <div type="button" class="btn" onclick="location.href='_/logout';">logout</div>
-              {{currentUser.name}}
-              {{currentUser.karma}}
-            </div>
+          <div id='logo-github'>
+              <img id='avatar' src={{currentUser.image_url}}>
           </div>
-          
-          
+          <div ng-hide="currentUser.username" onclick="location.href='auth/github';" style="color:white; font-size:2rem;">login</div>
+          <div id="userSettings" ng-hide="!currentUser.username" bs-dropdown="settings" style=" color:white; font-size:2rem;">Settings</div>
+        </div>
       </div>
       <div ng-controller="FormController">
         <form name="searchForm" class="submission-form" ng-submit="getSearchResults()">
