adding favicon to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+
   <script src="//use.edgefonts.net/source-sans-pro:n3,i3,n4,i4,n9.js"></script>      
   <script src="lib/bower_components/jquery/jquery.js"></script>
   <script src="lib/bower_components/angular/angular.js"></script>
