--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,8 @@
         <div ng-controller="LoginController">
 
           <div id='logo-github' ng-click="updateLocation()">
-              <a ng-href='auth/github/#{{urlHash}}' target='_self'><img id='avatar' src={{currentUser.image_url}} /></a>
+              <a ng-href='auth/github/#{{urlHash}}' target='_self'><img ng-show="currentUser.username" id='avatar' src={{currentUser.image_url}} />
+              <img ng-hide="currentUser.username" id='avatar' src='./images/transparent-01.png' /></a>
           </div>
           <div class="userSettings" 
                ng-show="currentUser.username" 
