add more fixes to get twitter button on each item

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <script src="lib/bower_components/angular/angular.js"></script>
   <script src="lib/spin.min.js"></script>
   <script src="lib/angular-spinner.min.js"></script>
+  <script src="lib/twitter-share-button.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
   <script src="lib/bower_components/angular-strap/dist/angular-strap.min.js"></script>
   <script src="build/bundle.js"></script>
