--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   <script src="lib/socialite/socialite.min.js"></script>
   <script src="lib/spin.min.js"></script>
   <script src="lib/angular-spinner.min.js"></script>
-  <script src="http://platform.twitter.com/widgets.js"></script>
+  <!-- // <script src="http://platform.twitter.com/widgets.js"></script> -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
   <script src="lib/bower_components/angular-strap/dist/angular-strap.min.js"></script>
   <script src="build/bundle.js"></script>
@@ -120,5 +120,41 @@
     <div class='divider'>Lovingly made at <a class='footer-link' href='http://www.hackreactor.com' target='_blank'>Hack Reactor</a></div>
     <div class='divider'>&copy2013 ReadUp</div>
   </footer>
+  <script>
+    var timeout;
+    $(document).ready(function() {
+      var elements;
+
+      $("#main-container").bind("DOMSubtreeModified", function(e) {
+        if (e.target.id === "links") {
+          elements = $('.social-buttons');
+          clearTimeout(timeout);
+          timeout = setTimeout(function() {
+            CheckForDisplay();
+          }, 50);
+        }
+      });
+
+      function CheckForDisplay() {
+          for (var i = 0; i < elements.length; i++) {
+            if (elementInViewport(elements[i])) {
+                Socialite.load(elements[i]);
+                elements.splice(i,1);
+            }
+          }
+      }
+      function elementInViewport(el) {
+
+          var rect = el.getBoundingClientRect();
+          return (
+              rect.top >= 0 &&
+                  rect.left >= 0 &&
+                      rect.bottom <= window.innerHeight &&
+                          rect.right <= window.innerWidth
+          );
+      }
+      $(window).on('resize', CheckForDisplay).on('scroll', CheckForDisplay);
+    });
+  </script>
 </body>
 </html>
