--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
   </footer>
   <script>
     // Lazy loading of Twitter share button
-    var timeout;
+    var timeout;  // This, kids, is a global variable. Never do this, except to kill timeouts.
     $(document).ready(function() {
       var elements,
           i = 0;
