Initial work with angular infinite scroll

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   <script src="//use.edgefonts.net/source-sans-pro:n3,i3,n4,i4,n9.js"></script>
   <script src="lib/bower_components/jquery/jquery.js"></script>
   <script src="lib/bower_components/angular/angular.js"></script>
+  <script src="lib/ng-infinite-scroll.js"></script>
   <script src="lib/spin.min.js"></script>
   <script src="lib/angular-spinner.min.js"></script>
   <!-- // <script src="http://platform.twitter.com/widgets.js"></script> -->
